[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/Objects/icon_full_final.png" type="Texture" id=1]
[ext_resource path="res://Scenes/dyn_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/menu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/startgame.gd" type="Script" id=5]
[ext_resource path="res://Scripts/credits.gd" type="Script" id=6]
[ext_resource path="res://Scripts/customization.gd" type="Script" id=7]
[ext_resource path="res://Resources/Audio/option_select.wav" type="AudioStream" id=8]
[ext_resource path="res://Resources/Prot/gold_coin.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "rotate"
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.59 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="TextureRect" parent="."]
margin_left = 72.0
margin_top = 64.0
margin_right = 3600.0
margin_bottom = 576.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -36.0
custom_fonts/font = ExtResource( 2 )
text = "Haunted (c) 2020 v: 0. 61"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startgame" type="Button" parent="."]
margin_left = 80.0
margin_top = 256.0
margin_right = 368.0
margin_bottom = 296.0
flat = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
scene_to_load = "res://Scenes/item_roulette.tscn"

[node name="Label" type="Label" parent="startgame"]
margin_right = 296.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
text = "Start Game"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="customization" type="Button" parent="."]
margin_left = 80.0
margin_top = 336.0
margin_right = 368.0
margin_bottom = 376.0
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
scene_to_load = "res://Scenes/customize.tscn"

[node name="Label" type="Label" parent="customization"]
margin_right = 296.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
text = "Customize"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Button" parent="."]
margin_left = 80.0
margin_top = 416.0
margin_right = 368.0
margin_bottom = 456.0
flat = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
scene_to_load = "res://Scenes/credits.tscn"

[node name="Label" type="Label" parent="credits"]
margin_right = 296.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
text = "Credits"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="."]
margin_left = 80.0
margin_top = 496.0
margin_right = 368.0
margin_bottom = 536.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="quit"]
margin_right = 296.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
text = "Quit"
align = 3
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gold_sprite" type="Sprite" parent="."]
position = Vector2( 744, 288 )
texture = ExtResource( 9 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="gold_sprite"]
anims/rotate = SubResource( 1 )

[node name="Label" type="Label" parent="gold_sprite"]
margin_left = 48.0
margin_top = -16.0
margin_right = 138.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "0 Gold"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" parent="." instance=ExtResource( 4 )]

[node name="select" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
[connection signal="pressed" from="startgame" to="." method="_on_startgame_pressed"]
[connection signal="pressed" from="customization" to="." method="_on_customization_pressed"]
[connection signal="pressed" from="credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
